[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/IAPScreen.png" type="Texture" id=1]
[ext_resource path="res://Scripts/IAP.gd" type="Script" id=2]
[ext_resource path="res://UI/back.png" type="Texture" id=3]
[ext_resource path="res://SFX/button.wav" type="AudioStream" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 5
script = ExtResource( 2 )

[node name="over" type="ColorRect" parent="."]
modulate = Color( 0.576471, 0.415686, 0.6, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -5.0
color = Color( 0.721569, 0.721569, 0.721569, 0.619608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IAPScreen" type="Sprite" parent="."]
position = Vector2( 299, 599 )
texture = ExtResource( 1 )

[node name="back" type="Sprite" parent="."]
position = Vector2( 42, 287 )
scale = Vector2( 0.52649, 0.520979 )
texture = ExtResource( 3 )

[node name="1K" type="Button" parent="."]
margin_left = 21.0
margin_top = 407.0
margin_right = 572.0
margin_bottom = 622.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="100" type="Button" parent="."]
margin_left = 24.0
margin_top = 620.0
margin_right = 296.0
margin_bottom = 783.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="200" type="Button" parent="."]
margin_left = 301.0
margin_top = 622.0
margin_right = 573.0
margin_bottom = 785.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="500" type="Button" parent="."]
margin_left = 19.0
margin_top = 785.0
margin_right = 291.0
margin_bottom = 948.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2K" type="Button" parent="."]
margin_left = 301.0
margin_top = 786.0
margin_right = 573.0
margin_bottom = 949.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = -2.0
margin_top = 252.0
margin_right = 81.0
margin_bottom = 323.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="." groups=[
"sfx",
]]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="pressed" from="1K" to="." method="_on_1K_pressed"]
[connection signal="pressed" from="100" to="." method="_on_100_pressed"]
[connection signal="pressed" from="200" to="." method="_on_200_pressed"]
[connection signal="pressed" from="500" to="." method="_on_500_pressed"]
[connection signal="pressed" from="2K" to="." method="_on_2K_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
